fix(footer): dark mode sytyles

--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -4,7 +4,7 @@
   padding: 20px 0;
   margin: 40px auto 0;
   align-items: center;
-  background-color: var(--color-neutrals-050);
+  background-color: var(--color-neutrals-800);
 }
 
 .footer-contents {
@@ -96,7 +96,7 @@
   transition: color .075s ease-out;
 
   &:hover {
-    color: var(--color-background);
+    color: #fff;
   }
 }
 
@@ -186,3 +186,12 @@
     flex-direction: column;
   }
 }
+
+// ==============================================================
+// Dark mode
+// ==============================================================
+// @media (prefers-color-scheme: dark) {
+//   .footer-container {
+//     background-color: var(--color-neutrals-050);
+//   }
+// }
